<resources>
    <string name="app_name">Boro Service Provider</string>
    <string name="service_name">Service</string>
    <string name="provider_name">Provider</string>
    <string name="login_name">Login</string>
    <string name="login_register_name">Login or Register</string>
    <string name="register_name">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_contact_email">University Email</string>
    <string name="prompt_contact_number">University Number</string>
    <string name="prompt_contact_address">University Address</string>
    <string name="prompt_map">Search in map</string>
    <string name="not_allowed">N/A</string>
    <string name="contact_email">b1162802@live.tees.ac.uk</string>
    <string name="contact_mobile">01642 218121</string>
    <string name="contact_address">Campus Heart, Southfield Rd, Middlesbrough TS1 3BX</string>
    <string name="update_password_title">Update Password</string>
    <string name="continue_update">Continue</string>
    <string name="choose_services">Choose a Service You Provide</string>
    <string name="prompt_date">Date of Birth</string>
    <string name="prompt_provider">I am a provider</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_number">Mobile</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_service_provider">Filter Services</string>
    <string name="set_home">Set Home Address</string>
    <string name="weather">Weather</string>
    <string name="no_news">No news available for this region</string>
    <string name="prompt_service_services">Select Services</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_re_password">Confirm Password</string>
    <string name="prompt_change_password">Change</string>
    <string name="forgot_login_password">Reset Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_text">New User??</string>
    <string name="login_text">Existing User??</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="retype_invalid">Password does not match</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_age">Not a valid age</string>
    <string name="invalid_gender">Not a valid gender</string>
    <string name="invalid_date">Not a valid date</string>
    <string name="invalid_address">Not a valid address</string>
    <string name="invalid_number">Not a valid UK number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update_pass_fail">"Could not update password"</string>
    <string name="update_success">"Password Updated Successfully"</string>
    <string name="register_failed">"Registration failed"</string>
    <string name="forgot">"Forgot Username or password?"</string>
    <string name="logout">"Logout"</string>

    <string-array name="gender_value">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">View Profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_services">My Services</string>
    <string name="menu_favourites">My Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_terms">Terms and condition</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="update">Update Profile</string>
    <string name="terms_condition">TERMS AND CONDITIONS</string>
    <string name="privacy_title">PRIVACY POLICY</string>
    <string name="fav_title">My Favourite</string>
    <string name="terms_software">SOFTWARE LICENSE</string>
    <string name="terms_misconduct">HARASSMENT AND MISCONDUCT</string>
    <string name="sub_header_terms">PLEASE REVIEW OUR TERMS OF USE AND PRIVACY POLICY CAREFULLY BEFORE DOWNLOADING OUR APPLICATION OR USING OUR SERVICE FOR THE FIRST TIME.</string>
    <string name="intro_terms">
        <b>-</b> These Terms of Use <b>(\"Terms\")</b> describe the terms and conditions upon which Clients <b>(\"You\" or “Your” or “Yourself” or “User\")</b> access and use the Application (defined herein).
        \n\n\n <b>-</b> These Terms govern the basis upon which <b>Boro Service Provider</b> (\"Boro Service Provider” or the “Company\") will allow you to access or use its Application, to connect with a third-party Partner who will provide you Mobility Services within the Territory.
        \n\n\n <b>-</b> Your access to and use of the Application is subject to these Terms and applicable policies, as may be modified or updated by <b>Boro Service Provider</b> from time to time, and effective upon posting of updated Terms or/and applicable policies.
        \n\n\n <b>-</b> Continued use of our Services after modification and update shall constitute your consent to such changes or modifications.
        \n\n\n <b>-</b> These Terms expressly supersede prior agreements with you. <b>Boro Service Provider</b> may immediately terminate these Terms or any portion therein at any time without cause.
        \n\n\n <b>-</b> Please ensure that you read and understand all of these Terms carefully before you use the Application or request our Mobility Services.
        \n\n\n <b>-</b> By using or accessing the Application, you agree to be bound by these Terms. Your agreement to these Terms shall operate as a binding and legally enforceable agreement between you and <b>Boro Service Provider</b> in respects to the features on the Application and in relation to <b>Boro Service Provider</b>.
        \n\n\n <b>-</b> If you do not agree with these Terms, do not use this Application or Mobility Services.
        \n\n\n <b>-</b> You acknowledge and agree that <b>Boro Service Provider</b> is a technology service provider which acts as an intermediary between you and the Partner who provides Mobility Services as distinct from transportation services. Upon your execution (electronic or otherwise) of these Terms, you and <b>Boro Service Provider</b> shall be bound by details set forth herein.
        \n\n\n <b>-</b> <b>Boro Service Provider</b> and You shall be individually referred to as <b>“Party”</b> and collectively as <b>“Parties”.</b></string>
    <string name="software_usage">"Subject to your compliance with these Terms, <b>Boro Service Provider</b> grants you a limited non-exclusive, non-sub licensee, revocable, non-transferable license to use the Application on your personal device, solely for your personal use.  "</string>
    <string name="harassment_text">
        <b>-</b> "Harassment or misconduct refers to any unwanted conduct, contact or behavior undertaken by one Party toward another, whether sexual, physical or verbal, without explicit consent of the other person.
        \n\n\n<b>-</b> You are requested to not touch, behave inappropriately, or make inappropriate comments to your Partner while using the Mobility Service.
        \n\n\n<b>-</b> Examples or impropriety include nudges, whistles, winks, touches or flirting with the Partner.
        \n\n\n<b>-</b> Your contact with your Partner should end when the trip is completed.
        \n\n\n<b>-</b> If you find any reason to believe that the Partner is not behaving in an appropriate way, you may cancel the Mobility Service immediately and inform <b>Boro Service Provider</b> as soon as possible. "</string>
    <string name="intro_privacy">Our mission at <b>Boro Service Provider</b> is to facilitate the freedom of mobility for all. When you use the services provided by <b>Boro Service Provider (\" we\" or \" our\") </b>including our application <b>( \"Apps\" )</b> that enable you to connect to our systems and obtain services <b>(\" Platform\")</b>, we collect, use and share some of your personal information. This Policy details the collection, use and disclosure of user information in connection with the <b>Boro</b> application.  This Policy applies to all of our users/clients and partners (collectively <b>\" you\", \" your\" or \" yours\"</b>), and our Platform and services.  All terms that have not been specifically defined herein shall have the same meaning as provided under the Terms of Use. This Privacy Policy should be read in conjunction with the Terms of Use as applicable to the Boro service(s) that you are using.</string>
    <string name="your_consent">Your Consent:</string>
    <string name="policy_info">By using the Tootle application, you agree to provide consent to the collection, use and sharing of your personal information as described in this Policy.</string>
    <string name="collect">Collection of Information:</string>
    <string name="collect_info">When you use the Boro application, we collect and hold the information that you provide for our business purposes and functions:
        \n\n\n <b>Personal Information of User</b> such as your name, gender, email address, phone number, and information about your device is collected when you use the Boro application. You may also opt to share additional information with us about your profile, including your photo, saved addresses, and other preferences.
        \n\n\n <b>Location Information:</b> We collect information like your GPS location and IP address depending on whether you use our Platform as customer or a partner:
        \n\n\n      <b>User Location Data:</b> We collect data from our Users\' mobile devices if they enable us to do so .</string>
    <string name="your_usage">Use of your personal information:</string>
    <string name="info_usage"><b>We use your personal information to:  </b>
        \n\nDisplay this information on our Platform Maintain the safety and security of our users (Customers, Partners and Drivers) Provide customer support Improve our Platform Comply with legal and statutory obligations Build and maintain the Boro community
        \n\n\nWe also use your personal information to continually improve our Platform and provide you with the most efficient and superior user experience, possible.
        \n\n\n <b>Specifically, your information is used to: </b> Verify your identity and maintain your account </string>
</resources>