<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favourites" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

    </group>
    <group
    android:id="@+id/menu_bottom"
    android:checkableBehavior="single">

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_terms" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/menu_privacy" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_contact_page_24"
            android:title="@string/menu_contact_us" />
    </group>
</menu>