<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choose_services"
        android:textSize="24sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servicesTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/prompt_service_services"
        app:boxStrokeColor="#FFC107"
        app:errorEnabled="true"
        app:hintTextColor="#120E0E">

    <AutoCompleteTextView
        android:id="@+id/services"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="text"
        android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateServices"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="?attr/colorPrimaryVariant"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/continue_update"
            android:textColor="#100E0E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#FFC107"
            app:cornerRadius="5dp" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="75dp"
            android:layout_height="66dp"
            android:layout_marginStart="35dp"
            android:theme="@style/progressBarDefault"
            android:visibility="invisible" />
    </RelativeLayout>


</LinearLayout>
