<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryVariant"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/register_name"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_scre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="384dp"
                android:layout_height="78dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:hint="@string/prompt_name"
                app:boxStrokeColor="#FFC107"
                app:errorEnabled="true"
                app:hintTextColor="#120E0E">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="369dp"
                    android:layout_height="64dp"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="428dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="384dp"
                android:layout_height="78dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/prompt_email"
                app:boxStrokeColor="#FFC107"
                app:errorEnabled="true"
                app:hintTextColor="#120E0E">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="369dp"
                    android:layout_height="64dp"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="428dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="384dp"
                android:layout_height="78dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/prompt_password"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="#FFC107"
                app:errorEnabled="true"
                app:hintTextColor="#120E0E">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="369dp"
                    android:layout_height="64dp"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="428dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="395dp"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ageTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="150dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/prompt_age"
                    app:boxStrokeColor="#FFC107"
                    app:errorEnabled="true"
                    app:hintTextColor="#120E0E"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age"
                        android:layout_width="138dp"
                        android:layout_height="64dp"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        tools:layout_editor_absoluteX="24dp"
                        tools:layout_editor_absoluteY="428dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="222dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/prompt_gender"
                    app:boxStrokeColor="#FFC107"
                    app:errorEnabled="true"
                    app:hintTextColor="#120E0E">

                    <AutoCompleteTextView
                        android:id="@+id/gender"
                        android:layout_width="212dp"
                        android:layout_height="64dp"
                        android:inputType="none"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="384dp"
                android:layout_height="78dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/prompt_date"
                app:boxStrokeColor="#FFC107"
                app:errorEnabled="true"
                app:hintTextColor="#120E0E">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datepicker"
                    android:layout_width="369dp"
                    android:layout_height="64dp"
                    android:inputType="date"
                    android:selectAllOnFocus="true"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="428dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                style="@style/Widget.App.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/prompt_provider"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/register"
                android:layout_width="136dp"
                android:layout_height="75dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:enabled="false"
                android:rotationX="-2"
                android:rotationY="180"
                app:backgroundTint="#FFC107"
                app:fabCustomSize="70dp"
                app:fabSize="normal"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="75dp"
                android:layout_height="76dp"
                android:layout_marginTop="-85dp"
                android:theme="@style/progressBarDefault"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="268dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/login_text"
                android:textAlignment="viewEnd"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>